--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,13 @@
     <name>auth-spring-boot-starter</name>
     <description>Demo project for Spring Boot</description>
 
+    <distributionManagement>
+        <repository>
+            <id>cloudpioneer</id>
+            <url>http://maven.dacube.com.cn/nexus/content/repositories/releases</url>
+        </repository>
+    </distributionManagement>
+
     <properties>
         <java.version>1.8</java.version>
     </properties>
